change config file